# crean

./: .gitmodules  CMakeLists.txt  README.md
games/: CMakeLists.txt
games/sandbox/: CMakeLists.txt
games/sandbox/src/: main.cpp
include/crean/core/: logger.hpp  types.hpp
include/crean/platform/: platform.hpp  window.hpp
include/crean/platform/glfw/: glfw.hpp  glfw_platform.hpp  glfw_window.hpp
src/crean/platform/glfw/: glfw.cpp  glfw_platform.cpp  glfw_window.cpp
